--- a/style.css
+++ b/style.css
@@ -126,6 +126,18 @@
      height: 1.5em;
  }
 
+ .left {
+     display: flex;
+     gap: 0.5em;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .checklist {
+     cursor: pointer;
+     height: 1.9em;
+ }
+
  .addtask {
      color: white;
      font-family: regm;
@@ -241,7 +253,9 @@
      background: rgba(0, 0, 0, 0.22);
      backdrop-filter: blur(7.6px);
      -webkit-backdrop-filter: blur(7.6px);
-     animation: fadeIn 1s ease;
+     animation: fadeIn 0.7s ease;
+     position: fixed;
+     top: 0;
  }
 
  #kuralinfo {
@@ -256,7 +270,8 @@
      user-select: all;
  }
 
- #newtaskcon {
+ .newtaskcon,
+ .newgoalcon {
      padding: 1.3em 2em;
      background-color: #f7f7f7;
      border-radius: 10px;
@@ -291,4 +306,103 @@
      font-family: regm;
      display: grid;
      place-items: center;
+ }
+
+ /* -------------------------------------------CHECKLIST---------------------- */
+
+ .checkimg {
+     width: 100vw;
+     position: absolute;
+     bottom: 0;
+ }
+
+ .checkmain {
+     overflow-y: scroll;
+ }
+
+ yellow {
+     color: #daec11;
+ }
+
+ .milecon {
+     display: flex;
+     width: 100%;
+     justify-content: space-between;
+ }
+
+ .milecon p {
+     padding: 0.5em 1.8em;
+     background-color: #d1d1d1;
+     font-size: small;
+     border-radius: 3px;
+     cursor: pointer;
+ }
+
+ .checkcon {
+     margin: 1em 2em;
+     display: flex;
+     flex-wrap: wrap;
+     overflow: scroll;
+ }
+
+ .checkconinner {
+     margin-left: 0.5em;
+     display: flex;
+     gap: 0.5em;
+ }
+
+ .checktopic {
+     font-family: regm;
+     margin-bottom: 1em;
+ }
+
+ .customCheckbox {
+     width: 2.5em;
+     aspect-ratio: 1/1;
+     cursor: pointer;
+     -webkit-appearance: none;
+     -moz-appearance: none;
+     appearance: none;
+     border: 1.5px solid #efffae;
+     border-radius: 50%;
+     position: relative;
+ }
+
+ .customCheckbox:checked {
+     background-color: #dcff51;
+     border-color: #dcff51;
+     display: grid;
+     place-items: center;
+     animation: fadeIn 0.7s ease;
+ }
+
+ /* 
+ .customCheckbox:checked::before {
+     content: "1";
+     color: rgb(0, 0, 0);
+ } */
+ .top,
+ .lineup {
+     display: flex;
+     flex-direction: column;
+     margin: 0 2em;
+ }
+
+ .topics {
+     font-family: regm;
+     margin: 0.3em 0;
+ }
+
+ .topics2 {
+     margin-top: 2em;
+ }
+
+ .inputfeild {
+     padding: 0.7em;
+     outline: 0;
+     border: 0;
+     margin: 0.1em;
+     border-radius: 5px;
+     background-color: #5d5d5d;
+     color: white;
  }
